--- a/docs/01-Java/08-middleware/01-Kafka.mdx
+++ b/docs/01-Java/08-middleware/01-Kafka.mdx
@@ -1,25 +1,24 @@
----
-title: Kafka使用问题
-sidebar_label: Kafka使用问题
----
 
-## Kafka使用问题
 
-### 如何使用Docker Compose部署Kafka
+# Kafka
 
-> 借鉴github[仓库](https://github.com/conduktor/kafka-stack-docker-compose/tree/master)
->
-> 下面示例使用最简单的 `zk-single-kafka-single.yml`
+## 如何使用Docker Compose部署Kafka
+
+:::info
+借鉴github[仓库](https://github.com/conduktor/kafka-stack-docker-compose/tree/master)<br/>
+下面示例使用最简单的 `zk-single-kafka-single.yml`
+:::
+
 
 以下为正确示例：
 
 对仓库中的文件作了两处调整
 
-- 调整了对钱的连接地址
+- 调整了连接地址
 
 ```diff
--       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
-+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-192.168.3.163}:9092,DOCKER://host.docker.internal:29092
+-  KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
++  KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-192.168.3.163}:9092,DOCKER://host.docker.internal:29092
 ```
 - 在Zoo1和kafka1中都添加了时区，可以解决时间不对的问题
 
@@ -27,8 +26,8 @@ sidebar_label: Kafka使用问题
 +      TZ: Asia/Shanghai
 ```
 
-
-
+<details>
+  <summary>点击展开查看完整配置文件</summary>
 ```yml
 version: '2.1'
 
@@ -72,15 +71,18 @@ services:
       - zoo1
 ```
 
-#### 报错一
+</details>
+
+### 报错 could not be established. Broker may not be available
 
 调整外部连接地址即可解决问题
 
 ```log
-[| adminclient-1] org.apache.kafka.clients.NetworkClient : [AdminClient clientId=adminclient-1] Connection to node 1 (/127.0.0.1:9092) could not be established. Broker may not be available.
+[| adminclient-1] org.apache.kafka.clients.NetworkClient : [AdminClient clientId=adminclient-1] 
+Connection to node 1 (/127.0.0.1:9092) could not be established. Broker may not be available.
 ```
 
-### 如何使用命令行操作集群
+## 如何使用命令行操作集群
 
 ```shell
 # 创建topic
@@ -107,7 +109,7 @@ docker run --tty --interactive \
 		   
 ```
 
-### 如何在Spring Boot中使用Kafka
+## 如何在Spring Boot中使用Kafka
 
 [参考资料](https://www.baeldung.com/spring-kafka)
 
@@ -117,6 +119,22 @@ docker run --tty --interactive \
 
 参考资料涉及多种类型消息混合生产和消费。值得学习和借鉴。
 
+## 生产者使用注意点
+
+1. 一个JVM下使用一个生产者即可，多个生产者可能OOM，一个生产者`buffer.memory=32MB` 。
+2. Batch设计，首先看`batch.size` 是否满足，不满足再看`linger.ms` ,当缓存消息到达`buffer.memory` 会直接触发消息发送到服务器。
+3. acks, 0 -不确认，1-所有主节点写入成功，all-所有节点写入成功
+
+
+## 触发Coordinator Rebalance
+
+- 组成员数量变化
+- 订阅主题数量变化
+- 订阅主题分区数变化
+
+建议
+1. `session.timeout.ms > 3 * hearbeat.interval.ms`
+2. 控制消费者消费消息的时间，不要超过`max.poll.interval.ms`配置时间
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
