--- a/docs/09-Develop-Tools/05-not develop software tips.mdx
+++ b/docs/09-Develop-Tools/05-not develop software tips.mdx
@@ -1,21 +1,9 @@
----
-title: 常用软件使用问题
-sidebar_label: 常用软件使用问题
----
+# 常用软件
 
-## 重置mobaxterm主密码
-
-[参考连接](https://www.cnblogs.com/johnsonzzz/p/15158499.html)
 
 ## chrome打不开设置处理办法
 
 设置exe程序以兼容性方式运行即可。
-
-## idea 重置
-
-`C:\Users\xxxx\AppData\Roaming\JetBrains\IntelliJIdea2021.1\eval`
-
-删除以上目录中的 `idea211.evaluation.key`
 
 
 ## 浏览HEIC图片工具
@@ -70,6 +58,27 @@ pnpm list -g picgo
 
 1. 在vscode中安装PicGo插件
 2. 在vscode中设置PicGo的Picgo: Config Path为 `C:\Users\xxx\AppData\Local\pnpm\global\5\node_modules\picgo\config.json`
+
+
+##  U30Air SMB共享问题
+
+解决办法（启用来宾 SMB 登录）,通过本地组策略（适合 Win10 专业版/企业版）
+
+1. `Win + R` → 输入 `gpedit.msc` → 回车。
+2. 路径：
+    
+    ```
+    计算机配置 → 管理模板 → 网络 → Lanman 工作站
+    
+    ```
+    
+3. 找到策略：
+    
+    **启用不安全的来宾登录 (Enable insecure guest logons)**
+    
+4. 双击 → 选择 **已启用** → 确定。
+5. 运行 `gpupdate /force` 刷新策略。
+
 
 
 import TailProtocal from "@site/src/components/TailProtocal";
