--- a/docs/09-Develop-Tools/06-develop software tips.mdx
+++ b/docs/09-Develop-Tools/06-develop software tips.mdx
@@ -1,4 +1,4 @@
-# windows系统中常用软件
+# 常用开发软件
 
 ## windows 下使用 dbeaver 连接 mysql调整字体大小
 
@@ -35,6 +35,22 @@
 "terminal.integrated.defaultProfile.windows": "Git Bash"
 
 ```
+
+## idea中powershell中文是原生编码`<AA>`解决办法
+
+```
+powershell.exe -NoExit -Command "[Console]::OutputEncoding=[System.Text.Encoding]::UTF8; $env:LANG='C.UTF-8'; $env:LC_ALL='C.UTF-8'”
+```
+
+## 重置mobaxterm主密码
+
+[参考连接](https://www.cnblogs.com/johnsonzzz/p/15158499.html)
+
+## idea 重置
+
+`C:\Users\xxxx\AppData\Roaming\JetBrains\IntelliJIdea2021.1\eval`
+
+删除以上目录中的 `idea211.evaluation.key`
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
