--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,4 +1,4 @@
-# 用法示例页面
+# Introduction
 
 ## React 组件 live code
 
@@ -38,14 +38,6 @@ import TabItem from "@theme/TabItem";
     ```python print("Hello, Python!") ```
   </TabItem>
 </Tabs>
-
-## Admonition 提示块
-
-import Admonition from "@theme/Admonition";
-
-<Admonition type="note" title="注意">
-  这是一个提示块，可以用来高亮重要信息。
-</Admonition>
 
 ## CodeBlock 高亮代码块
 
