--- a/docs/04-Python/01-Python Problems.mdx
+++ b/docs/04-Python/01-Python Problems.mdx
@@ -38,6 +38,13 @@ python -m pip install ipykernel jupyter
 pip install -r requirements.txt
 ```
 
+## 卸载python报错
+![20250925105034](https://s2.loli.net/2025/09/25/gAXWovnKtqYBVwR.png)
+
+解决方案 以管理员身份运行安装包进行卸载。<br/>
+(详情请参考)[https://blog.csdn.net/weixin_44628096/article/details/149024298]
+
+
 
 
 import TailProtocal from "@site/src/components/TailProtocal";
