--- a/docs/09-Develop-Tools/05-not develop software tips.mdx
+++ b/docs/09-Develop-Tools/05-not develop software tips.mdx
@@ -80,6 +80,38 @@ pnpm list -g picgo
 5. 运行 `gpupdate /force` 刷新策略。
 
 
+## win10系统拷贝文件或者删除文件问题
+
+问题：剩余时间：正在计算  <br/>
+处理方案: 使用CMD管理员模式执行 ，然后重启电脑。
+```cmd
+sfc /scannow
+```
+
+执行后的结果：Windows 资源保护找到了损坏文件并成功修复了它们。<br/>
+对于联机修复，位于 windir\Logs\CBS\CBS.log 的 CBS 日志文件中<br/>
+有详细信息。例如 C:\Windows\Logs\CBS\CBS.log。对于脱机修复，<br/>
+/OFFLOGFILE 标记提供的日志文件中有详细信息。
+
+![20250927015301](https://s2.loli.net/2025/09/27/p5vbtsFy1wqANcz.png)
+
+如果还是没有效果，使用WiseForce Deleter删除文件夹。
+
+## win10禁用更新
+
+```cmd
+gpedit.msc
+```
+
+在“本地组策略编辑器”窗口的左侧面板中，请根据以下路径导航到Windows Update文件夹：“计算机配置”>“管理员模板”>“Windows组件”>“Windows更新”。
+更改“删除使用所有windonws更新功能的访问权限”为启用。
+更改“配置自动更新为”为禁用。
+
+:::info
+打开更新方式 <br/>
+更改“删除使用所有windonws更新功能的访问权限”为禁用。<br/>
+更改“配置自动更新为”为启用。
+:::
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
