--- a/docs/11-AI And BD/04-AI-formula.mdx
+++ b/docs/11-AI And BD/04-AI-formula.mdx
@@ -49,7 +49,7 @@ $$
 
 $z=Wx+b$
 
-其中：
+其中:
 
 - $W$是权重矩阵，
 - $x$ 是输入向量，
@@ -57,11 +57,11 @@ $z=Wx+b$
 
 **激活函数**
 
-$ReLU：f(z)=max⁡(0,z)$
+$ReLU:f(z)=max⁡(0,z)$
 
-$Sigmoid：f(z)=\frac{1}{1 + e^{-z}}$
+$Sigmoid:f(z)=\frac{1}{1 + e^{-z}}$
 
-$Tanh：f(z)=\frac{e^z - e^{-z}}{e^z + e^{-z}}f(z)$
+$Tanh:f(z)=\frac{e^z - e^{-z}}{e^z + e^{-z}}f(z)$
 
 SoftMax 省略，转化数据为概率分布
 
