some docs updated

--- a/docs/02-Frontend/15-react.mdx
+++ b/docs/02-Frontend/15-react.mdx
@@ -1,11 +1,16 @@
----
-title: Basic React
-sidebar_label: Basic React
-description: Basic React
----
-
 # Basic React
 
+##  新建react项目
+
+```shell 
+npm create vite@latest my-react-app
+
+cd my-react-app
+npm install
+npm run dev
+
+```
+![](https://s2.loli.net/2025/10/07/hW3iwvBKxSORsHf.png)
 
 ## Updating a nested object
 
@@ -125,6 +130,60 @@ how
     }))
 ```
 
+## 箭头函数
+
+| 写法                          | 含义                               | 是否需要写 `return` |
+| --------------------------- | -------------------------------- | -------------- |
+| `(param) => ( expression )` | **隐式返回**，自动返回括号里的表达式结果           | ❌ 不需要          |
+| `(param) => { statement }`  | **函数体语句块**，不会自动返回，需要手动写 `return` | ✅ 需要           |
+
+## react数据遍历指定key
+
+key 只能用在 父组件 map 渲染列表的元素上，而不是子组件内部。
+
+```tsx title="Need key component"  showLineNumbers {9-12}
+export default function Contact({
+  img,
+  imgAlt,
+  name,
+  phoneNumber,
+  email,
+}: ContactInfo) {
+  return (
+    //这是 不对的，因为 key 只能用在 父组件 map 
+    // 渲染列表的元素上，而不是子组件内部。
+    // <article className="contact-card" key={id}>
+    <article className="contact-card">
+      <img src={img} alt={imgAlt} />
+      <h3>{name}</h3>
+      <div className="info-group">
+        <img src={phoneIcon} alt="phone icon" />
+        <p>{phoneNumber}</p>
+      </div>
+      <div className="info-group">
+        <img src={mailIcon} alt="mail icon" />
+        <p>{email}</p>
+      </div>
+    </article>
+  );
+}
+```
+
+```txs title="Parent component pass key" showLineNumbers {5}
+function App() {
+  return (
+    <div className="contacts">
+      {contacts.map((contact) => (
+        <Contact key={contact.id} {...contact} />
+      ))}
+    </div>
+  );
+}
+```
+
+## 向react组件传递参数
+
+[code here](https://github.com/Halcyon666/react-daily-learn/commit/e87a2e1e8d009760ac679b86762cea55530310b8)
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
