删除VideoProgressTable组件并引入 VideoProgressDashboard

--- a/docs/02-Frontend/17-learn-react.mdx
+++ b/docs/02-Frontend/17-learn-react.mdx
@@ -12,10 +12,9 @@
 进度情况
 
 import { videos1 } from '@site/src/data/videos';
-import VideoProgressTable from '@site/src/components/VideoProgressTable';
+import VideoProgressDashboard from '@site/src/components/VideoProgressDashboard'
 
-<VideoProgressTable videos={videos1} />
-
+<VideoProgressDashboard videos={videos1}/>
 
 
 import TailProtocal from "@site/src/components/TailProtocal";
