Update 05-MyBatis-Plus code generate.mdx

--- a/docs/01-Java/06-DateBase/05-MyBatis-Plus code generate.mdx
+++ b/docs/01-Java/06-DateBase/05-MyBatis-Plus code generate.mdx
@@ -11,7 +11,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.5.4'
     implementation group: 'com.baomidou', name: 'mybatis-plus-generator', version: '3.5.6'
-    implementation group: 'freemarker', name: 'freemarker', version: '2.3.9'
+// change before version 2.3.9 
+// maybe have a error in init,so update the version 
+    implementation group: 'freemarker', name: 'freemarker', version: '2.3.31'
 
 
     compileOnly 'org.projectlombok:lombok'
