--- a/docs/02-Frontend/15-react.mdx
+++ b/docs/02-Frontend/15-react.mdx
@@ -263,9 +263,160 @@ It still works — React will call your wrapper function on click, which in turn
 
 | Code                          | When to use                                   | Notes                               |
 | ----------------------------- | --------------------------------------------- | ----------------------------------- |
-| `onClick={getRecipe}`         | Default, most common                          | Pass function directly              |
-| `onClick={() => getRecipe()}` | When you need to wrap logic or pass arguments | Creates a new function every render |
+| `onClick={changeToHeld}`      | Default, most common,or closure function      | Pass function directly              |
+| `onClick={() => changeToHeld(id)}` | When you need to wrap logic or pass arguments | Creates a new function every render |
 
+
+### pass parameter function
+
+```tsx title="app.tsx" 
+import React, { useState } from "react";
+import "./index.css";
+import Die from "./Die";
+import { nanoid } from "nanoid/non-secure";
+
+export interface DiceProp {
+  value: number;
+  isHeld: boolean;
+  id: string;
+}
+
+const App: React.FC = () => {
+  const generateDice = () =>
+    Array.from({ length: 10 }, () => ({
+      value: Math.ceil(Math.random() * 6),
+      isHeld: false,
+      id: nanoid(),
+    }));
+  const [dice, setDice] = useState<DiceProp[]>(generateDice());
+  // highlight-start
+  const changeToHeld = (id: string) =>
+    setDice((prevDice) =>
+      prevDice.map((die) => (die.id === id ? { ...die, isHeld: true } : die))
+    );
+  // highlight-end
+  const diceElements = dice.map((diceProp) => (
+    // highlight-next-line
+    <Die key={diceProp.id} changeToHeld={changeToHeld} die={diceProp} />
+  ));
+
+  const rollDice = () => {
+    setDice(generateDice());
+  };
+
+  return (
+    <main>
+      <div className="dice-container">{diceElements}</div>
+      <button className="roll-button" onClick={rollDice}>
+        Roll
+      </button>
+    </main>
+  );
+};
+
+export default App;
+```
+
+```tsx title="Die.tsx"
+import type { DiceProp } from "./App";
+
+/**
+ * Recommendation
+ * For scalable apps / larger state management: Option 1 is preferred 
+ * because it separates state (data) from behavior (actions), which aligns with React best practices.
+ */
+const Die: React.FC<{ die: DiceProp; changeToHeld: (id: string) => void }> = ({
+  die,
+  changeToHeld,
+}) => {
+  const { value, isHeld, id } = die;
+  return (
+    <button
+      className={isHeld ? "held" : "notHeld"}
+      // highlight-next-line
+      onClick={() => changeToHeld(id)}
+    >
+      {value}
+    </button>
+  );
+};
+
+export default Die;
+
+```
+
+### pass a closure function
+
+```tsx title="App.tsx"
+import React, { useState } from "react";
+import "./index.css";
+import Die from "./Die";
+import { nanoid } from "nanoid/non-secure";
+
+export interface DiceProp {
+  value: number;
+  isHeld: boolean;
+  id: string;
+}
+
+const App: React.FC = () => {
+  const generateDice = () =>
+    Array.from({ length: 10 }, () => ({
+      value: Math.ceil(Math.random() * 6),
+      isHeld: false,
+      id: nanoid(),
+    }));
+  const [dice, setDice] = useState<DiceProp[]>(generateDice());
+  const changeToHeld = (id: string) =>
+    setDice((prevDice) =>
+      prevDice.map((die) => (die.id === id ? { ...die, isHeld: true } : die))
+    );
+
+  const diceElements = dice.map((diceProp) => (
+    <Die
+      key={diceProp.id}
+      // closure function
+      // highlight-next-line
+      changeToHeld={() => changeToHeld(diceProp.id)}
+      die={diceProp}
+    />
+  ));
+
+  const rollDice = () => {
+    setDice(generateDice());
+  };
+
+  return (
+    <main>
+      <div className="dice-container">{diceElements}</div>
+      <button className="roll-button" onClick={rollDice}>
+        Roll
+      </button>
+    </main>
+  );
+};
+
+export default App;
+```
+
+```tsx
+import type { DiceProp } from "./App";
+
+const Die: React.FC<{ die: DiceProp; changeToHeld: () => void }> = ({
+  die,
+  changeToHeld,
+}) => {
+  const { value, isHeld } = die;
+  return (
+      // highlight-next-line
+    <button className={isHeld ? "held" : "notHeld"} onClick={changeToHeld}>
+      {value}
+    </button>
+  );
+};
+
+export default Die;
+```
 
 ## 如何动态设置变量名为key值
 
@@ -389,6 +540,18 @@ export default function WindowTracker() {
   return <h1>Window width: {windowWidth}</h1>;
 }
 ```
+## `Array.from`
+
+```ts
+// The _ means: “Ignore the element, just use the index.”
+Array.from({ length: 3 }, (_, i) => i * 2);
+// → [0, 2, 4]
+```
+当没有参数需要被使用时，使用不写参数.
+```ts
+Array.from({ length: 10 }, () => Math.ceil(Math.random() * 6))
+```
+
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
