--- a/docs/02-Frontend/01-react/02-2025-learn.mdx
+++ b/docs/02-Frontend/01-react/02-2025-learn.mdx
@@ -1,7 +1,7 @@
 
-# React学习
+# learn
 
-## Learn React JS
+## React 学习计划
 
 资源列表
 
@@ -11,9 +11,8 @@
 
 进度情况
 
-import { videos1 } from '@site/src/data/videos';
+import { reactLearn2025 } from '@site/src/data/videos';
 import VideoProgressDashboard from '@site/src/components/VideoProgressDashboard'
 
-<VideoProgressDashboard videos={videos1}/>
-
+<VideoProgressDashboard videos={reactLearn2025}/>
 
