--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -48,8 +48,10 @@ public class ArchGuardRuleTest extends AbstractTest {
 Learning React and Vue to create dynamic and interactive web applications.
 
 react 
-- [tenzies](https://halcyon666.github.io/tenzies/)
 - [tic-tac-toe](https://halcyon666.github.io/react-tic-tac-toe/)
+- [tenzies](https://halcyon666.github.io/tenzies/)
+- [assembly-enggame](https://halcyon666.github.io/assembly-endgame/)
+- [chef-claude](https://halcyon666.github.io/chef-claude/)
 
 vue
 - [taco-shop](https://halcyon666.github.io/taco-shop/)
